components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__gitignore_for_each_tracking_level@all.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: "render_gitignore(\"1001\", level)"
---
# Written by pharos (nonmem.scm track_in_git = "all"). Do not edit; change pharos.toml instead.
