components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__plan_json_bounded.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: built.plan.to_json().unwrap()
---
{
  "created": "[TIMESTAMP]",
  "pharos_version": "test",
  "model": "1001.mod",
  "out_dir": "scm/1001",
  "candidates": [
    {
      "name": "WT_CL",
      "theta": 4,
      "initial": 0.1,
      "fixed": 0.0,
      "lower": 0.0
    },
    {
      "name": "CRCL_CL",
      "theta": 5,
      "initial": 1.2,
      "fixed": 1.0,
      "lower": 0.01,
      "upper": 10.0
    },
    {
      "name": "WT_V",
      "theta": 6,
      "initial": 0.1,
      "fixed": 0.0,
      "lower": 0.0,
      "upper": 2.0
    }
  ],
  "options": {
    "direction": [
      "forward",
      "backward"
    ],
    "forward_alpha": 0.05,
    "backward_alpha": 0.001,
    "num_rounds": null,
    "max_retries": 3,
    "cov_step": false,
    "final_cov_step": true
  }
}
